# tafs

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  run.py
.claude/: CLAUDE.md
.claude/agents/: academic_writer.md  coder.md  planner.md
.claude/rules/: architecture-layout.md  bibliography-rules.md  data-and-caching.md  evaluation-protocol.md  experiment-tracking.md  general-coding-conventions.md  language-rule.md  logging-and-style.md  mlflow-and-repro.md  selector-abstractions.md  training-recipe.md
.claude/specs/: tafs.md
configs/: config.yaml
configs/data/tafs/: synthetic.yaml
configs/experiment/tafs/: smoke.yaml  synthetic.yaml
configs/logging/: default.yaml
configs/mlflow/: local.yaml
configs/trainer/: default.yaml
notebooks/: getting_started.ipynb
reports/tafs/: main.tex  refs.bib
reports/tafs/figures/: fig_ablation_bars.tex  fig_architecture.tex  fig_attention_heatmap.tex  fig_heads_depth.tex  fig_synthetic_mse.tex  fig_synthetic_regime.tex  table_ablation.tex  table_constraint_ablation.tex  table_context_ablation.tex  table_datasets.tex  table_main_results.tex  table_smape.tex  table_synthetic.tex
reports/tafs/latex_output/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out
src/: __init__.py
src/core/: __init__.py
src/core/data/: __init__.py  base.py
src/core/experiments/: __init__.py  base.py
src/core/models/: __init__.py  base.py
src/tafs/: __init__.py
tests/: test_smoke.py
tests/core/: test_metrics.py  test_report_markdown.py  test_seeding.py
tests/tafs/: test_tafs_forward.py
(+24 files in other folders)
