[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tafs"
version = "0.1.0"
description = "TAFS — Transformer-Attentive Feature Selection for Sequential Regression"
authors = [
  { name = "Huseyin Karaca" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = "~=3.10.0"

dependencies = [
    # Core ML
    "torch>=2.11.0",
    "pytorch-lightning>=2.6.1",

    # Config management
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",

    # Experiment tracking
    "mlflow>=3.12.0",

    # Base predictors
    "lightgbm>=4.6.0",
    "xgboost>=2.0.0",
    "catboost>=1.2.0",
    "scikit-learn",
    "statsmodels>=0.14.6",    # SARIMAX base predictor

    # Data handling
    "numpy",
    "pandas",
    "pyarrow>=23.0.1",        # parquet I/O

    # Utilities
    "loguru>=0.7.3",
    "python-dotenv",

    # Visualisation and notebooks
    "matplotlib",
    "seaborn>=0.13.2",
    "jupyterlab",
    "notebook",
    "ipython",

    # Dev tools
    "pytest",
    "ruff",
]


[tool.ruff]
line-length = 100
src = ["src"]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true
